--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
                 <div id="titre">
                     <div id="title_subtitle">
                         <h1 id="main_title">Yoann <span>SECEMBER</span></h1>
-                        <h2>Technicien Support Informatique</h2>
+                        <h2>Superviseur logistique pour l'activité de Gestion de stock externalisé/h2>
                             <div id="soulignement"></div>
 						<div id="intro"> 
 						<p>
 						</br> </br>
 						My five last years in Amazon allowed me to have a great autonomy at 
-						work and developed a strong desire to learn new IT skills.
+						work and developed a strong desire to learn new data skills.
 						<p>
 						</div>
                 </div>
@@ -54,7 +54,7 @@
                             <a href="mailto:yoanns_76@hotmail.fr">yoanns_76@hotmail.fr</a>
                         </li>
 						<li><span> My online resume :</span>
-							<a href="https://gotane.github.io/CV-Secember-Yoann-tech/">https://gotane.github.io/CV-Secember-Yoann-tech/</a>
+							<a href="https://gotane.github.io/CV-SECEMBER-YOANN-VENDORFLEX/">https://gotane.github.io/CV-SECEMBER-YOANN-VENDORFLEX/</a>
 						</li>
                     </ul>
                 </div>
@@ -178,6 +178,16 @@
                                 <i class="fas fa-circle"></i>
                             </div>
                             <div class="texte_article">
+                                <p>Data analysis (Excel) </p>
+                            </div>                          
+                        </div>
+                    </article>
+                    <article>                        
+                        <div class="dates">
+                            <div class="icons">
+                                <i class="fas fa-circle"></i>
+                            </div>
+                            <div class="texte_article">
                                 <p>Troubleshoot and repair IT equipment, send defective devices to vendor </p>
                             </div>                          
                         </div>
@@ -202,6 +212,7 @@
                             </div>                          
                         </div>
                     </article>
+
 
 
 					       <article>
@@ -262,7 +273,27 @@
                                 <i class="fas fa-circle"></i>
                             </div>
                             <div class="texte_article">
-                                <p>Microsoft office (Excel, word, Visio, PowerPoint) : 4 /5 </p>
+                                <p>Microsoft office Excel (pivot table, Visual Basic, Xlookup) : 4/5</p>
+                            </div>                          
+                        </div>
+                    </article>
+                    <article>                        
+                        <div class="dates">
+                            <div class="icons">
+                                <i class="fas fa-circle"></i>
+                            </div>
+                            <div class="texte_article">
+                                <p>Microsoft office Word, Powerpoint, Visio : 4/5</p>
+                            </div>                          
+                        </div>
+                    </article>
+                    <article>                        
+                        <div class="dates">
+                            <div class="icons">
+                                <i class="fas fa-circle"></i>
+                            </div>
+                            <div class="texte_article">
+                                <p>Communication tool (Chime, Outlook) : 4/5</p>
                             </div>                          
                         </div>
                     </article>
