--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <div id="titre">
                     <div id="title_subtitle">
                         <h1 id="main_title">Yoann <span>SECEMBER</span></h1>
-                        <h2>Superviseur logistique pour l'activité de Gestion de stock externalisé/h2>
+                        <h2>Superviseur logistique pour l'activité de Gestion de stock externalisé</h2>
                             <div id="soulignement"></div>
 						<div id="intro"> 
 						<p>
