--- a/index.html
+++ b/index.html
@@ -230,7 +230,16 @@
 
                         <div class="contenu">
                             <p><strong>Amazon (ORY1)</strong></p>
-                            <p>FC associate in ICQA team (process audit and stock counting) </p>
+                            <p>FC associate in ORY1  </p>
+                            <ul>
+                                    <li>Pick</li>
+
+                                    <li>Pack</li>
+
+                                    <li>Ship</li>
+
+                                    <li>ICQA (process audit and stock counting)</li>
+                                </ul>
                         </div>
                     </article>
                     <article>         
