--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<p>
 						</br> </br>
 						My five last years in Amazon allowed me to have a great autonomy at 
-						work and developed a strong desire to learn new data skills.
+						work and developed a strong desire to learn new data analysis skills.
 						<p>
 						</div>
                 </div>
@@ -167,7 +167,7 @@
 
                                     <li>Creating ticket for extra RMA devices and sim card requests</li>
 
-                                    <li>Receiving and sending IT equipment : ARMA, new hire kit, site launch ...</li>
+                                    <li>Receiving and sending IT equipment : ARMA (from AMZL, Vendor Flex), new hire kit, site launch ...</li>
                                 </ul>
                               
                             </div>                          
