--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                                 <i class="fas fa-circle"></i>
                             </div>
                             <div class="texte_article">
-                                <p>supervision of a team</p>    
+                                <p>Supervision of a team</p>    
                             </div>                          
                         </div>
                     </article>
